<resources>
    <string name="app_name">Onboarding</string>
    <string name="txtButton">Volgende</string>
    <string name="txtWelcome">Het is bijna zover. Het schooljaar gaat
        bijna beginnen. Om alle informatie op
        een rijtje te krijgen hebben we het
        proces overzichtelijk gemaakt. In
        dit proces vertellen we over de school
        en de omgeving. Klik op de volgende
        knop om het proces te starten.</string>
    <string name="txtHeader">Welkom!</string>
    <string name="txtInfo1">Dit is een informatieve teksts die nog vervangen moet worden met de echte text over Roosendaal.</string>
    <string name="feedbackWelkom">Welkom bij de feedback, hieronder hebben wij een aantal vragen klaar staan voor u. We zouden het zeer op prijs stellen als u deze vragen op waarheid kunt beantwoorden.</string>
    <string name="feedbackVraag">Hoe goed heb je deze app en de school leren kennen met behulp van deze onboarding?</string>
    <string name="radioButtonText1">Heel erg goed</string>
    <string name="radioButtonText2">Goed</string>
    <string name="radioButtonText3">Redelijk</string>
    <string name="radioButtonText4">Niet heel goed</string>
    <string name="radioButtonText5">Niet</string>
    <string name="feedbackOpmerking">Heb je verder nog een idee voor of een opmerking over de onboarding?</string>
    <string name="PlaceHolderr">PlaceHolder</string>
</resources>
