<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.Main.MainActivity">

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_header_img"
        app:layout_constraintBottom_toTopOf="@+id/tvWelkomText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/custom_button"
        android:drawableEnd="@drawable/arrow_right"
        android:onClick="toMenuPage"
        android:text="@string/txtButton"
        android:textColor="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:fontFamily="@font/frutigerltstdbold"
        android:text="@string/txtHeader"
        android:textColor="@color/White"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvWelkomText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/edit_text_background"
        android:padding="10sp"
        android:text="@string/txtWelcome"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>