<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.FeedbackPagina.FeedbackActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="420dp"
        android:layout_height="277dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501"
        app:srcCompat="@drawable/header_img" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="231dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background">

                <TextView
                    android:id="@+id/tekstFeedbackMenu"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="32dp"
                    android:text="@string/feedbackWelkom"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textFeedback1"
                    android:layout_width="190dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="36dp"
                    android:gravity="center"
                    android:text="@string/feedbackVraag"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/tekstFeedbackMenu"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tekstFeedbackMenu"
                    app:layout_constraintTop_toBottomOf="@+id/tekstFeedbackMenu" />

                <RadioGroup
                    android:id="@+id/radio"
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="36dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="@+id/tekstFeedbackMenu"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textFeedback1"
                    app:layout_constraintTop_toBottomOf="@+id/tekstFeedbackMenu">

                    <RadioButton
                        android:id="@+id/RButton2-1"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Heel erg goed"
                        android:textSize="13dp" />

                    <RadioButton
                        android:id="@+id/RButton2-2"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Goed"
                        android:textSize="13dp" />

                    <RadioButton
                        android:id="@+id/RButton2-3"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Redelijk"
                        android:textSize="13dp" />

                    <RadioButton
                        android:id="@+id/RButton2-4"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Niet heel goed"
                        android:textSize="13dp" />

                    <RadioButton
                        android:id="@+id/RButton2-5"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Niet"
                        android:textSize="13dp" />

                </RadioGroup>

                <Button
                    android:id="@+id/buttonAfronden"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/custom_button"
                    android:text="Verzenden"
                    android:textColor="@color/White"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tekstFeedbackMenu"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="@+id/tekstFeedbackMenu"
                    app:layout_constraintTop_toBottomOf="@+id/editText2"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/feedbackOpmerking"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFeedback1" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="333dp"
                    android:layout_height="144dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="Vul hier je opmerking in"
                    android:inputType="textMultiLine"
                    android:padding="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tekstFeedbackTitel"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="Feedback"
        android:textColor="@color/White"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>